Add new ping pong icons in various formats
- Added pingpong-512.svg: A 512x512 SVG icon featuring a ping pong table and paddles.
- Added pingpong-72.png: A 72x72 PNG icon with a shadow effect for the ping pong theme.
- Added pingpong-72.svg: A 72x72 SVG icon with paddles and a ball, including a shadow filter.
- Added pingpong-96.png: A 96x96 PNG icon for the ping pong theme.
- Added pingpong-maskable.svg: A maskable SVG icon with safe zone padding for better adaptability.

--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,18 @@
   <title>PingPong Stats Tracker</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/svg+xml" href="assets/icons/pingpong-72.svg">
+  <!-- Apple Touch Icons -->
+  <link rel="apple-touch-icon" sizes="180x180" href="assets/icons/pingpong-180.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="assets/icons/pingpong-152.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="assets/icons/pingpong-120.png">
+  <link rel="apple-touch-icon" sizes="192x192" href="assets/icons/pingpong-192.png">
+  <!-- iOS PWA Meta Tags -->
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <meta name="apple-mobile-web-app-title" content="PingPong Stats">
   <link rel="manifest" href="manifest.webmanifest">
-  <meta name="theme-color" content="#1976d2">
+  <meta name="theme-color" content="#14532d">
 </head>
 
 <body>
